# Mumbai_Local

./: BLOG.md  Dockerfile  README.md  app.py  environment.py  gtfs_loader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train.py  training_log.json
static/css/: style.css
static/js/: app.js
templates/: index.html
